maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:5: error: not found: value trouverBiscuit
  val xBis = trouverBiscuit()(0)
             ^ShortestPathMaze:6: error: not found: value trouverBiscuit
  val yBis = trouverBiscuit()(1)
             ^