maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  val L:Int=getMondeLargeur()
  val H:Int=getMondeHauteur()
  val xBis = trouverBiscuit()(0)
  val yBis = trouverBiscuit()(1)
    // Your code here
}

def trouverBis():(Int,Int) = {
  return (1,2)
}